--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-partials": "^0.3.0"
+    "express-partials": "^0.3.0",
+    "firebase-admin": "^9.11.1"
   }
 }
