--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-partials": "^0.3.0",
-    "firebase-admin": "^9.11.1",
-    "object-to-array-convert": "^1.1.0"
+    "firebase-admin": "^9.11.1"
   }
 }
