--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "school" : "examplehigh",
     "schoolFull" : "Example City High School",
-    "schoolLogo" : "https://i.imgur.com/f34zXHR.png",
+    "schoolLogo" : "/static/examplehigh.png",
     "schoolColour" : "#333366",
     "schoolTextColour" : "#FFFFFF",
     "databaseURL" : "https://leopard-data-default-rtdb.asia-southeast1.firebasedatabase.app",
