--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/noahball/leopard#readme",
   "dependencies": {
+    "ascii-art": "^2.8.5",
+    "ascii-art-font": "^1.0.2",
     "axios": "^0.21.4",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
